force-app/main/default/src/objects/Appointment_MVN__c/Appointment_MVN__c.object-meta.xml
<CustomObject>
    <description>Appointment object used to track participant appointments</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>APPT-{00000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>