force-app/main/default/src/objects/Appointment_MVN__c/fields/Account_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>M-D lookup to the related account for this appointment</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>