force-app/main/default/src/objects/Appointment_MVN__c/fields/Appointment_Date_MVN__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_MVN__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName = &quot;MVN_Evkeeza&quot;,  TODAY() ,NULL)</defaultValue>
    <description>The scheduled date of the appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>