force-app/main/default/src/objects/Appointment_MVN__c/fields/Attended_MVN__c.field-meta.xml
<CustomField>
    <fullName>Attended_MVN__c</fullName>
    <description>Indicates if the participant attended their scheduled appointment</description>
    <label>Attended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>