force-app/main/default/src/objects/Appointment_MVN__c/fields/Care_Plan_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_MVN__c</fullName>
    <description>M-D lookup relationship to the care plan for this appointment</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>