force-app/main/default/src/objects/Appointment_MVN__c/fields/Diagnosis_MVN__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_MVN__c</fullName>
    <description>The diagnosis the participant received after their appointment.</description>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetic Macular Edema</fullName>
            </value>
            <value>
                <fullName>Diabetic Retinopathy</fullName>
            </value>
            <value>
                <fullName>NPDR - Mild</fullName>
            </value>
            <value>
                <fullName>NPDR - Moderate</fullName>
            </value>
            <value>
                <fullName>NPDR - Severe</fullName>
            </value>
            <value>
                <fullName>Proliferative</fullName>
                <label>Diabetic Retinopathy - Proliferative</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>