force-app/main/default/src/objects/Appointment_MVN__c/fields/Event_MVN__c.field-meta.xml
<CustomField>
    <fullName>Event_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event at which the consumer was recorded that was converted into the appointment&apos;s parent account/care plan.</description>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>