force-app/main/default/src/objects/Appointment_MVN__c/fields/Missed_Appointment_Reason_MVN__c.field-meta.xml
<CustomField>
    <fullName>Missed_Appointment_Reason_MVN__c</fullName>
    <description>The reason why the appointment was missed.</description>
    <label>Missed Appointment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Attended_MVN__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changed Physician</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Transportation Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>