force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Activity__c.field-meta.xml
<CustomField>
    <fullName>MVN_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Activity related to the Appointment record. Used for Evkeeza program. Created by Jon Prashaw.</description>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Care_Plan_MVN__c</field>
            <operation>equals</operation>
            <valueField>Case.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Appointments (Activity)</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>