force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Appointment_Date_Source__c.field-meta.xml
<CustomField>
    <fullName>MVN_Appointment_Date_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Date Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>