force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Approximate_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Approximate_Appointment_Date__c</fullName>
    <description>The approximate date of the appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approximate Appointment Date</label>
    <type>DateTime</type>
</CustomField>