force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Completed_Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Completed_Appointment_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremental number field which calculates the order of the completed appointments (i.e first appointment which is marked as complete = 1, second completed appointment = 2, etc.)</description>
    <label>Completed Appointment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>