force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Confirmed_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Appointment_Date__c</fullName>
    <description>The confirmed date/time of the appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Appointment Date</label>
    <type>DateTime</type>
</CustomField>