force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Confirmed_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Appt_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Appointment Date</label>
    <type>Date</type>
</CustomField>