force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Home_Health_Agency__c.field-meta.xml
<CustomField>
    <fullName>MVN_Home_Health_Agency__c</fullName>
    <description>Name of the Home Health Agency related to the appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Health Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>