force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Is_Past__c.field-meta.xml
<CustomField>
    <fullName>MVN_Is_Past__c</fullName>
    <description>Formula field which is set to True if the Confirmed Apppointment Date is 1 day prior to today. Created for Evkeeza by Jon Prashaw.</description>
    <formula>IF((RecordType.DeveloperName = &quot;MVN_Evkeeza&quot; &amp;&amp;   MVN_Confirmed_Appt_Date__c    = ( TODAY() - 1)), TRUE, FALSE)</formula>
    <label>Is Past</label>
    <type>Checkbox</type>
</CustomField>