force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Is_Upcoming__c.field-meta.xml
<CustomField>
    <fullName>MVN_Is_Upcoming__c</fullName>
    <description>Formula which marks ccheckbox as TRUE if the Confirmed Appt. Date is 1 Day away. Created for Evkeeza by Jon Prashaw.</description>
    <formula>IF((RecordType.DeveloperName = &quot;MVN_Evkeeza&quot; &amp;&amp;   MVN_Confirmed_Appt_Date__c   = ( TODAY() + 1)), TRUE, FALSE)</formula>
    <label>Is Upcoming</label>
    <type>Checkbox</type>
</CustomField>