force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Nurse_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Nurse_Name__c</fullName>
    <description>Name of the Nurse related to the appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nurse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>