force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Record_Type_Key__c.field-meta.xml
<CustomField>
    <fullName>MVN_Record_Type_Key__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Key</label>
    <type>Text</type>
</CustomField>