force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Shipment__c.field-meta.xml
<CustomField>
    <fullName>MVN_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to associate a Shipment record to a specific Appointment. Created for Evkeeza by Jon Prashaw.</description>
    <label>Shipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Care_Plan_MVN__c</field>
            <operation>equals</operation>
            <valueField>PJN_Shipment__c.PJN_Care_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Shipment__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>