force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Status__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &quot;MVN_Evkeeza&quot;, &quot;Pending&quot;, NULL)</defaultValue>
    <description>Status of the appointment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>