force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Total_Completed_Appointments__c.field-meta.xml
<CustomField>
    <fullName>MVN_Total_Completed_Appointments__c</fullName>
    <description>Total number of appointments with &quot;Completed&quot; Status.</description>
    <label>Total Completed Appointments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>