force-app/main/default/src/objects/Appointment_MVN__c/fields/MVN_Treatment_Attempted__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treatment Attempted</label>
    <type>Checkbox</type>
</CustomField>