force-app/main/default/src/objects/Appointment_MVN__c/fields/Other_Treatment_Details_MVN__c.field-meta.xml
<CustomField>
    <fullName>Other_Treatment_Details_MVN__c</fullName>
    <description>Details of the other recommended treatment. Required if &quot;Other&quot; is selected.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Treatment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>