force-app/main/default/src/objects/Appointment_MVN__c/fields/Physician_Specialty_MVN__c.field-meta.xml
<CustomField>
    <fullName>Physician_Specialty_MVN__c</fullName>
    <description>The specialty of the treating physician for this appointment.</description>
    <label>Physician Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ophthalmologist</fullName>
            </value>
            <value>
                <fullName>Optometrist</fullName>
            </value>
            <value>
                <fullName>Retinal Specialist</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>