force-app/main/default/src/objects/Appointment_MVN__c/fields/Recommended_Treatment_MVN__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Treatment_MVN__c</fullName>
    <description>The recommended treatment for the diagnosis.</description>
    <label>Recommended Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Laser Therapy</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>