force-app/main/default/src/objects/Appointment_MVN__c/fields/Timeline_Record_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Record_Name_MVN__c</fullName>
    <description>Displays a text value for use in the timeline view.</description>
    <formula>IF(
NOT(ISBLANK(TEXT(Physician_Specialty_MVN__c))) &amp;&amp; TEXT(Physician_Specialty_MVN__c) &lt;&gt; &quot;Unknown&quot;, 
TEXT(Physician_Specialty_MVN__c) &amp; &quot; Appointment&quot;, 
&quot;Appointment&quot;
)</formula>
    <label>Timeline Record Name</label>
    <type>Text</type>
</CustomField>