force-app/main/default/src/objects/Appointment_MVN__c/recordTypes/MVN_Evkeeza.recordType-meta.xml
<RecordType>
    <fullName>MVN_Evkeeza</fullName>
    <active>true</active>
    <description>Defines appointments related to Evkeeza</description>
    <label>Evkeeza</label>
</RecordType>