force-app/main/default/src/objects/Appointment_MVN__c/validationRules/Require_Missed_Appointment_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Missed_Appointment_Reason</fullName>
    <active>true</active>
    <description>Requires Missed Appointment Reason if Attended = No.</description>
    <errorConditionFormula>ISPICKVAL( Attended_MVN__c , &quot;No&quot;) &amp;&amp;
ISPICKVAL(  Missed_Appointment_Reason_MVN__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Missed_Appointment_Reason_MVN__c</errorDisplayField>
    <errorMessage>Please indicate why the participant missed their appointment</errorMessage>
</ValidationRule>